fix(zendesk): enforce z-index widget + remove old store code

--- a/src/styles/generic/_global.scss
+++ b/src/styles/generic/_global.scss
@@ -2,5 +2,5 @@
 
 /* Ensure the Zendesk widget stays behind the modals */
 .zEWidget-launcher {
-	z-index: $g-c-global-navbar-z;
+	z-index: $g-c-global-navbar-z !important;
 }
